# CocktailDispenser

./: main.py  manage.py  pyproject.toml
cocktaildispenser/: asgi.py  settings.py  urls.py  wsgi.py
cocktailhub/: settings.py
cocktailhub/cocktailhub/: asgi.py  settings.py  urls.py  wsgi.py
machine/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
machine/migrations/: 0001_initial.py
order/: admin.py  models.py
order/migrations/: 0001_initial.py
recipe/: admin.py  models.py
recipe/migrations/: 0001_initial.py  0002_recipeslot_ingredient.py
store/: admin.py  models.py
store/migrations/: 0001_initial.py
